--- a/DKTechDoc.lpi
+++ b/DKTechDoc.lpi
@@ -92,6 +92,14 @@
         <IsPartOfProject Value="True"/>
         <UnitName Value="UUtils"/>
       </Unit>
+      <Unit>
+        <Filename Value="forms\uaboutform.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="AboutForm"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="UAboutForm"/>
+      </Unit>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
