--- a/DKTechDoc.lpi
+++ b/DKTechDoc.lpi
@@ -16,8 +16,9 @@
     </General>
     <VersionInfo>
       <UseVersionInfo Value="True"/>
+      <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="41"/>
+      <BuildNr Value="42"/>
       <Language Value="0419"/>
     </VersionInfo>
     <BuildModes>
